# ai-powered-task-manager-app

backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/db/: session.py
backend/app/tasks/: crud.py  models.py  routes.py  schemas.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
