[project]
name = "ai-powered-task-manager-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Karassay",email = "karassay.raushanbek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
